Fixed long names on mobile

--- a/resources/css/sass/pages/_player.scss
+++ b/resources/css/sass/pages/_player.scss
@@ -221,6 +221,7 @@
             margin-bottom: 0;
             text-align: center;
             width: 100%;
+            padding-inline: 20px;
             &.hide-mobile{
                 display: none;
             }
